<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1.25x"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/payment_method"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPaymentMethod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod"
        app:layout_constraintVertical_bias="0"
        tools:itemCount="2"
        tools:listitem="@layout/item_payment_option" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvYouWillPaymentNow"
            style="@style/TextAppearance.YFC.Subheading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_1x"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/payment_method_screen_you_will_pay_now"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFuturePayments"
            style="@style/TextAppearance.YFC.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_1x"
            android:layout_marginTop="@dimen/spacing_0.125x"
            android:text="@string/payment_method_screen_future_payments"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYouWillPaymentNow" />

        <TextView
            android:id="@+id/tvCurrentPrice"
            style="@style/TextAppearance.YFC.Subheading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_1x"
            android:textColor="@color/black"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/tvYouWillPaymentNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            tools:text="AED 1,350" />

        <TextView
            android:id="@+id/tvRenewalPrice"
            style="@style/TextAppearance.YFC.Subheading5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_1x"
            android:textColor="@color/grey"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/tvFuturePayments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tvYouWillPaymentNow"
            tools:text=" AED 1,400/month" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubscribe"
            style="@style/Widget.YFC.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_1x"
            android:text="@string/payment_method_screen_subscribe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFuturePayments" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuyCredits"
            style="@style/Widget.YFC.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_1x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFuturePayments" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>