<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/spacing_0.5x">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="14dp"
        android:background="@color/white"
        android:padding="@dimen/spacing_0.5x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_bg" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_2.75x"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.YFC.Heading7"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="How do I get likes?" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_1.5x"
        android:gravity="center_horizontal"
        android:text="@string/payment_method_screen_payment_method_doesnt_work_description"
        android:textAppearance="@style/TextAppearance.YFC.Body1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_retry"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_retry"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_0.25x"
        android:text="@string/btn_retry"
        app:layout_constraintBottom_toTopOf="@id/button_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        style="@style/Widget.YFC.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_0.4x"
        android:background="@color/white_transparent"
        android:text="@string/payment_method_screen_back_to_shopping"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/progress_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:progress="50" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>